fix.password-visibility-btn

--- a/react-docs/src/components/pages/Cadastro.module.css
+++ b/react-docs/src/components/pages/Cadastro.module.css
@@ -46,5 +46,5 @@
     position:absolute;
     z-index: 3;
     right: 5%;
-    bottom: 17%;
+    bottom: 20%;
 }
